Fix Glyph plugin: Missing margin-left for span.fancytree-custom-icon
Close #484

--- a/src/skin-awesome/ui.fancytree.css
+++ b/src/skin-awesome/ui.fancytree.css
@@ -87,6 +87,7 @@ span.fancytree-custom-icon {
 /* Used by iconclass option and iconClass callback: */
 span.fancytree-custom-icon {
   display: inline-block;
+  margin-left: 0.5em;
 }
 /* Used by 'icon' node option: */
 img.fancytree-icon {
