--- a/src/skin-common.less
+++ b/src/skin-common.less
@@ -176,6 +176,7 @@ span.fancytree-custom-icon {
 /* Used by iconclass option and iconClass callback: */
 span.fancytree-custom-icon {
 	display: inline-block;
+	margin-left: @fancy-icon-spacing;
 }
 /* Used by 'icon' node option: */
 img.fancytree-icon {
