--- a/src/skin-vista/ui.fancytree.css
+++ b/src/skin-vista/ui.fancytree.css
@@ -104,6 +104,7 @@ span.fancytree-custom-icon {
 /* Used by iconclass option and iconClass callback: */
 span.fancytree-custom-icon {
   display: inline-block;
+  margin-left: 3px;
 }
 /* Used by 'icon' node option: */
 img.fancytree-icon {
